--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,7 +17,7 @@
 
 <body class="bg-mist">
   <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
+  <script type="module" src="./src/main.tsx"></script>
 </body>
 
 </html>
