--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <title>Education Hub</title>
+  <meta name="google-adsense-account" content="ca-pub-4314993549867732">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4314993549867732"
     crossorigin="anonymous"></script>
   <script src="https://accounts.google.com/gsi/client" async defer></script>
